--- a/index-mobile.html
+++ b/index-mobile.html
@@ -10,14 +10,14 @@
 
   <!-- Feel free  to remove these styles or customise in your own stylesheet 👍 -->
   
-   <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="style-mobile.css">
 </head>
 <body>
 
   <div class="div-parent">
 
     <div class="div-child-img">
-      <img src="./images/image-product-desktop.jpg">
+      <img src="./images/image-product-mobile.jpg">
     </div>
 
     <div class="div-child-text">
